--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">LayoutPractice</string>
     <string name="sign_text">aware</string>
+    <string name="user_name">Username</string>
+    <string name="password">Password</string>
 </resources>
