--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="sign_text">aware</string>
     <string name="user_name">Username</string>
     <string name="password">Password</string>
+    <string name="check_box">Remember me</string>
 </resources>
