--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="user_name">Username</string>
     <string name="password">Password</string>
     <string name="check_box">Remember me</string>
+    <string name="checkbox">checkbox</string>
+    <string name="remember_me">Remember me</string>
 </resources>
