--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="check_box">Remember me</string>
     <string name="checkbox">checkbox</string>
     <string name="remember_me">Remember me</string>
+    <string name="forget_password_text">Forget password?</string>
+    <string name="login_text">Login</string>
 </resources>
