[hzh] feat: add facebook and twitter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="forget_password_text">Forget password?</string>
     <string name="login_text">Login</string>
     <string name="connect_us_text">or connect us</string>
+    <string name="facebook">facebook</string>
 </resources>
